zad4/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> main_parts_interlacing
Rule 2     main_parts_interlacing -> main_parts_interlacing main_part
Rule 3     main_parts_interlacing -> main_part
Rule 4     main_part -> declaration
Rule 5     main_part -> fundef
Rule 6     main_part -> instruction
Rule 7     declarations -> declarations declaration
Rule 8     declarations -> <empty>
Rule 9     declaration -> TYPE inits ;
Rule 10    declaration -> error ;
Rule 11    inits -> inits , init
Rule 12    inits -> init
Rule 13    init -> ID = expression
Rule 14    instructions_opt -> instructions
Rule 15    instructions_opt -> <empty>
Rule 16    instructions -> instructions instruction
Rule 17    instructions -> instruction
Rule 18    instruction -> print_instr
Rule 19    instruction -> labeled_instr
Rule 20    instruction -> assignment
Rule 21    instruction -> choice_instr
Rule 22    instruction -> while_instr
Rule 23    instruction -> repeat_instr
Rule 24    instruction -> return_instr
Rule 25    instruction -> break_instr
Rule 26    instruction -> continue_instr
Rule 27    instruction -> compound_instr
Rule 28    instruction -> expression ;
Rule 29    print_instr -> PRINT expr_list ;
Rule 30    print_instr -> PRINT error ;
Rule 31    labeled_instr -> ID : instruction
Rule 32    assignment -> ID = expression ;
Rule 33    choice_instr -> IF ( condition ) instruction
Rule 34    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 35    choice_instr -> IF ( error ) instruction
Rule 36    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 37    while_instr -> WHILE ( condition ) instruction
Rule 38    while_instr -> WHILE ( error ) instruction
Rule 39    repeat_instr -> REPEAT instructions UNTIL condition ;
Rule 40    return_instr -> RETURN expression ;
Rule 41    continue_instr -> CONTINUE ;
Rule 42    break_instr -> BREAK ;
Rule 43    compound_instr -> { declarations instructions_opt }
Rule 44    condition -> expression
Rule 45    const -> INTEGER
Rule 46    const -> FLOAT
Rule 47    const -> STRING
Rule 48    expression -> const
Rule 49    expression -> ID
Rule 50    expression -> expression + expression
Rule 51    expression -> expression - expression
Rule 52    expression -> expression * expression
Rule 53    expression -> expression / expression
Rule 54    expression -> expression % expression
Rule 55    expression -> expression | expression
Rule 56    expression -> expression & expression
Rule 57    expression -> expression ^ expression
Rule 58    expression -> expression AND expression
Rule 59    expression -> expression OR expression
Rule 60    expression -> expression SHL expression
Rule 61    expression -> expression SHR expression
Rule 62    expression -> expression EQ expression
Rule 63    expression -> expression NEQ expression
Rule 64    expression -> expression > expression
Rule 65    expression -> expression < expression
Rule 66    expression -> expression LE expression
Rule 67    expression -> expression GE expression
Rule 68    expression -> ( expression )
Rule 69    expression -> ( error )
Rule 70    expression -> ID ( expr_list_or_empty )
Rule 71    expression -> ID ( error )
Rule 72    expr_list_or_empty -> expr_list
Rule 73    expr_list_or_empty -> <empty>
Rule 74    expr_list -> expr_list , expression
Rule 75    expr_list -> expression
Rule 76    fundefs_opt -> fundefs
Rule 77    fundefs_opt -> <empty>
Rule 78    fundefs -> fundefs fundef
Rule 79    fundefs -> fundef
Rule 80    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 81    args_list_or_empty -> args_list
Rule 82    args_list_or_empty -> <empty>
Rule 83    args_list -> args_list , arg
Rule 84    args_list -> arg
Rule 85    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 54
&                    : 56
(                    : 33 34 35 36 37 38 68 69 70 71 80
)                    : 33 34 35 36 37 38 68 69 70 71 80
*                    : 52
+                    : 50
,                    : 11 74 83
-                    : 51
/                    : 53
:                    : 31
;                    : 9 10 28 29 30 32 39 40 41 42
<                    : 65
=                    : 13 32
>                    : 64
AND                  : 58
BREAK                : 42
CONTINUE             : 41
ELSE                 : 34 36
EQ                   : 62
FLOAT                : 46
GE                   : 67
ID                   : 13 31 32 49 70 71 80 85
IF                   : 33 34 35 36
INTEGER              : 45
LE                   : 66
NEQ                  : 63
OR                   : 59
PRINT                : 29 30
REPEAT               : 39
RETURN               : 40
SHL                  : 60
SHR                  : 61
STRING               : 47
TYPE                 : 9 80 85
UNTIL                : 39
WHILE                : 37 38
^                    : 57
error                : 10 30 35 36 38 69 71
{                    : 43
|                    : 55
}                    : 43

Nonterminals, with rules where they appear

arg                  : 83 84
args_list            : 81 83
args_list_or_empty   : 80
assignment           : 20
break_instr          : 25
choice_instr         : 21
compound_instr       : 27 80
condition            : 33 34 37 39
const                : 48
continue_instr       : 26
declaration          : 4 7
declarations         : 7 43
expr_list            : 29 72 74
expr_list_or_empty   : 70
expression           : 13 28 32 40 44 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 74 75
fundef               : 5 78 79
fundefs              : 76 78
fundefs_opt          : 
init                 : 11 12
inits                : 9 11
instruction          : 6 16 17 31 33 34 34 35 36 36 37 38
instructions         : 14 16 39
instructions_opt     : 43
labeled_instr        : 19
main_part            : 2 3
main_parts_interlacing : 1 2
print_instr          : 18
program              : 0
repeat_instr         : 23
return_instr         : 24
while_instr          : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . main_parts_interlacing
    (2) main_parts_interlacing -> . main_parts_interlacing main_part
    (3) main_parts_interlacing -> . main_part
    (4) main_part -> . declaration
    (5) main_part -> . fundef
    (6) main_part -> . instruction
    (9) declaration -> . TYPE inits ;
    (10) declaration -> . error ;
    (80) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (18) instruction -> . print_instr
    (19) instruction -> . labeled_instr
    (20) instruction -> . assignment
    (21) instruction -> . choice_instr
    (22) instruction -> . while_instr
    (23) instruction -> . repeat_instr
    (24) instruction -> . return_instr
    (25) instruction -> . break_instr
    (26) instruction -> . continue_instr
    (27) instruction -> . compound_instr
    (28) instruction -> . expression ;
    (29) print_instr -> . PRINT expr_list ;
    (30) print_instr -> . PRINT error ;
    (31) labeled_instr -> . ID : instruction
    (32) assignment -> . ID = expression ;
    (33) choice_instr -> . IF ( condition ) instruction
    (34) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (35) choice_instr -> . IF ( error ) instruction
    (36) choice_instr -> . IF ( error ) instruction ELSE instruction
    (37) while_instr -> . WHILE ( condition ) instruction
    (38) while_instr -> . WHILE ( error ) instruction
    (39) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (40) return_instr -> . RETURN expression ;
    (42) break_instr -> . BREAK ;
    (41) continue_instr -> . CONTINUE ;
    (43) compound_instr -> . { declarations instructions_opt }
    (48) expression -> . const
    (49) expression -> . ID
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression % expression
    (55) expression -> . expression | expression
    (56) expression -> . expression & expression
    (57) expression -> . expression ^ expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression SHL expression
    (61) expression -> . expression SHR expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression NEQ expression
    (64) expression -> . expression > expression
    (65) expression -> . expression < expression
    (66) expression -> . expression LE expression
    (67) expression -> . expression GE expression
    (68) expression -> . ( expression )
    (69) expression -> . ( error )
    (70) expression -> . ID ( expr_list_or_empty )
    (71) expression -> . ID ( error )
    (45) const -> . INTEGER
    (46) const -> . FLOAT
    (47) const -> . STRING

    TYPE            shift and go to state 33
    error           shift and go to state 31
    PRINT           shift and go to state 3
    ID              shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 4
    REPEAT          shift and go to state 15
    RETURN          shift and go to state 1
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 29
    {               shift and go to state 32
    (               shift and go to state 8
    INTEGER         shift and go to state 14
    FLOAT           shift and go to state 23
    STRING          shift and go to state 16

    choice_instr                   shift and go to state 2
    repeat_instr                   shift and go to state 5
    return_instr                   shift and go to state 6
    const                          shift and go to state 7
    main_part                      shift and go to state 9
    main_parts_interlacing         shift and go to state 10
    continue_instr                 shift and go to state 11
    while_instr                    shift and go to state 12
    program                        shift and go to state 13
    assignment                     shift and go to state 17
    labeled_instr                  shift and go to state 18
    compound_instr                 shift and go to state 19
    declaration                    shift and go to state 20
    break_instr                    shift and go to state 24
    instruction                    shift and go to state 25
    fundef                         shift and go to state 26
    print_instr                    shift and go to state 28
    expression                     shift and go to state 30

state 1

    (40) return_instr -> RETURN . expression ;
    (48) expression -> . const
    (49) expression -> . ID
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression % expression
    (55) expression -> . expression | expression
    (56) expression -> . expression & expression
    (57) expression -> . expression ^ expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression SHL expression
    (61) expression -> . expression SHR expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression NEQ expression
    (64) expression -> . expression > expression
    (65) expression -> . expression < expression
    (66) expression -> . expression LE expression
    (67) expression -> . expression GE expression
    (68) expression -> . ( expression )
    (69) expression -> . ( error )
    (70) expression -> . ID ( expr_list_or_empty )
    (71) expression -> . ID ( error )
    (45) const -> . INTEGER
    (46) const -> . FLOAT
    (47) const -> . STRING

    ID              shift and go to state 34
    (               shift and go to state 8
    INTEGER         shift and go to state 14
    FLOAT           shift and go to state 23
    STRING          shift and go to state 16

    const                          shift and go to state 7
    expression                     shift and go to state 35

state 2

    (21) instruction -> choice_instr .

    TYPE            reduce using rule 21 (instruction -> choice_instr .)
    error           reduce using rule 21 (instruction -> choice_instr .)
    PRINT           reduce using rule 21 (instruction -> choice_instr .)
    ID              reduce using rule 21 (instruction -> choice_instr .)
    IF              reduce using rule 21 (instruction -> choice_instr .)
    WHILE           reduce using rule 21 (instruction -> choice_instr .)
    REPEAT          reduce using rule 21 (instruction -> choice_instr .)
    RETURN          reduce using rule 21 (instruction -> choice_instr .)
    BREAK           reduce using rule 21 (instruction -> choice_instr .)
    CONTINUE        reduce using rule 21 (instruction -> choice_instr .)
    {               reduce using rule 21 (instruction -> choice_instr .)
    (               reduce using rule 21 (instruction -> choice_instr .)
    INTEGER         reduce using rule 21 (instruction -> choice_instr .)
    FLOAT           reduce using rule 21 (instruction -> choice_instr .)
    STRING          reduce using rule 21 (instruction -> choice_instr .)
    $end            reduce using rule 21 (instruction -> choice_instr .)
    UNTIL           reduce using rule 21 (instruction -> choice_instr .)
    }               reduce using rule 21 (instruction -> choice_instr .)
    ELSE            reduce using rule 21 (instruction -> choice_instr .)


state 3

    (29) print_instr -> PRINT . expr_list ;
    (30) print_instr -> PRINT . error ;
    (74) expr_list -> . expr_list , expression
    (75) expr_list -> . expression
    (48) expression -> . const
    (49) expression -> . ID
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression % expression
    (55) expression -> . expression | expression
    (56) expression -> . expression & expression
    (57) expression -> . expression ^ expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression SHL expression
    (61) expression -> . expression SHR expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression NEQ expression
    (64) expression -> . expression > expression
    (65) expression -> . expression < expression
    (66) expression -> . expression LE expression
    (67) expression -> . expression GE expression
    (68) expression -> . ( expression )
    (69) expression -> . ( error )
    (70) expression -> . ID ( expr_list_or_empty )
    (71) expression -> . ID ( error )
    (45) const -> . INTEGER
    (46) const -> . FLOAT
    (47) const -> . STRING

    error           shift and go to state 37
    ID              shift and go to state 34
    (               shift and go to state 8
    INTEGER         shift and go to state 14
    FLOAT           shift and go to state 23
    STRING          shift and go to state 16

    expr_list                      shift and go to state 36
    expression                     shift and go to state 38
    const                          shift and go to state 7

state 4

    (37) while_instr -> WHILE . ( condition ) instruction
    (38) while_instr -> WHILE . ( error ) instruction

    (               shift and go to state 39


state 5

    (23) instruction -> repeat_instr .

    TYPE            reduce using rule 23 (instruction -> repeat_instr .)
    error           reduce using rule 23 (instruction -> repeat_instr .)
    PRINT           reduce using rule 23 (instruction -> repeat_instr .)
    ID              reduce using rule 23 (instruction -> repeat_instr .)
    IF              reduce using rule 23 (instruction -> repeat_instr .)
    WHILE           reduce using rule 23 (instruction -> repeat_instr .)
    REPEAT          reduce using rule 23 (instruction -> repeat_instr .)
    RETURN          reduce using rule 23 (instruction -> repeat_instr .)
    BREAK           reduce using rule 23 (instruction -> repeat_instr .)
    CONTINUE        reduce using rule 23 (instruction -> repeat_instr .)
    {               reduce using rule 23 (instruction -> repeat_instr .)
    (               reduce using rule 23 (instruction -> repeat_instr .)
    INTEGER         reduce using rule 23 (instruction -> repeat_instr .)
    FLOAT           reduce using rule 23 (instruction -> repeat_instr .)
    STRING          reduce using rule 23 (instruction -> repeat_instr .)
    $end            reduce using rule 23 (instruction -> repeat_instr .)
    UNTIL           reduce using rule 23 (instruction -> repeat_instr .)
    }               reduce using rule 23 (instruction -> repeat_instr .)
    ELSE            reduce using rule 23 (instruction -> repeat_instr .)


state 6

    (24) instruction -> return_instr .

    TYPE            reduce using rule 24 (instruction -> return_instr .)
    error           reduce using rule 24 (instruction -> return_instr .)
    PRINT           reduce using rule 24 (instruction -> return_instr .)
    ID              reduce using rule 24 (instruction -> return_instr .)
    IF              reduce using rule 24 (instruction -> return_instr .)
    WHILE           reduce using rule 24 (instruction -> return_instr .)
    REPEAT          reduce using rule 24 (instruction -> return_instr .)
    RETURN          reduce using rule 24 (instruction -> return_instr .)
    BREAK           reduce using rule 24 (instruction -> return_instr .)
    CONTINUE        reduce using rule 24 (instruction -> return_instr .)
    {               reduce using rule 24 (instruction -> return_instr .)
    (               reduce using rule 24 (instruction -> return_instr .)
    INTEGER         reduce using rule 24 (instruction -> return_instr .)
    FLOAT           reduce using rule 24 (instruction -> return_instr .)
    STRING          reduce using rule 24 (instruction -> return_instr .)
    $end            reduce using rule 24 (instruction -> return_instr .)
    UNTIL           reduce using rule 24 (instruction -> return_instr .)
    }               reduce using rule 24 (instruction -> return_instr .)
    ELSE            reduce using rule 24 (instruction -> return_instr .)


state 7

    (48) expression -> const .

    +               reduce using rule 48 (expression -> const .)
    -               reduce using rule 48 (expression -> const .)
    *               reduce using rule 48 (expression -> const .)
    /               reduce using rule 48 (expression -> const .)
    %               reduce using rule 48 (expression -> const .)
    |               reduce using rule 48 (expression -> const .)
    &               reduce using rule 48 (expression -> const .)
    ^               reduce using rule 48 (expression -> const .)
    AND             reduce using rule 48 (expression -> const .)
    OR              reduce using rule 48 (expression -> const .)
    SHL             reduce using rule 48 (expression -> const .)
    SHR             reduce using rule 48 (expression -> const .)
    EQ              reduce using rule 48 (expression -> const .)
    NEQ             reduce using rule 48 (expression -> const .)
    >               reduce using rule 48 (expression -> const .)
    <               reduce using rule 48 (expression -> const .)
    LE              reduce using rule 48 (expression -> const .)
    GE              reduce using rule 48 (expression -> const .)
    ;               reduce using rule 48 (expression -> const .)
    ,               reduce using rule 48 (expression -> const .)
    )               reduce using rule 48 (expression -> const .)


state 8

    (68) expression -> ( . expression )
    (69) expression -> ( . error )
    (48) expression -> . const
    (49) expression -> . ID
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression % expression
    (55) expression -> . expression | expression
    (56) expression -> . expression & expression
    (57) expression -> . expression ^ expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression SHL expression
    (61) expression -> . expression SHR expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression NEQ expression
    (64) expression -> . expression > expression
    (65) expression -> . expression < expression
    (66) expression -> . expression LE expression
    (67) expression -> . expression GE expression
    (68) expression -> . ( expression )
    (69) expression -> . ( error )
    (70) expression -> . ID ( expr_list_or_empty )
    (71) expression -> . ID ( error )
    (45) const -> . INTEGER
    (46) const -> . FLOAT
    (47) const -> . STRING

    error           shift and go to state 40
    ID              shift and go to state 34
    (               shift and go to state 8
    INTEGER         shift and go to state 14
    FLOAT           shift and go to state 23
    STRING          shift and go to state 16

    const                          shift and go to state 7
    expression                     shift and go to state 41

state 9

    (3) main_parts_interlacing -> main_part .

    TYPE            reduce using rule 3 (main_parts_interlacing -> main_part .)
    error           reduce using rule 3 (main_parts_interlacing -> main_part .)
    PRINT           reduce using rule 3 (main_parts_interlacing -> main_part .)
    ID              reduce using rule 3 (main_parts_interlacing -> main_part .)
    IF              reduce using rule 3 (main_parts_interlacing -> main_part .)
    WHILE           reduce using rule 3 (main_parts_interlacing -> main_part .)
    REPEAT          reduce using rule 3 (main_parts_interlacing -> main_part .)
    RETURN          reduce using rule 3 (main_parts_interlacing -> main_part .)
    BREAK           reduce using rule 3 (main_parts_interlacing -> main_part .)
    CONTINUE        reduce using rule 3 (main_parts_interlacing -> main_part .)
    {               reduce using rule 3 (main_parts_interlacing -> main_part .)
    (               reduce using rule 3 (main_parts_interlacing -> main_part .)
    INTEGER         reduce using rule 3 (main_parts_interlacing -> main_part .)
    FLOAT           reduce using rule 3 (main_parts_interlacing -> main_part .)
    STRING          reduce using rule 3 (main_parts_interlacing -> main_part .)
    $end            reduce using rule 3 (main_parts_interlacing -> main_part .)


state 10

    (1) program -> main_parts_interlacing .
    (2) main_parts_interlacing -> main_parts_interlacing . main_part
    (4) main_part -> . declaration
    (5) main_part -> . fundef
    (6) main_part -> . instruction
    (9) declaration -> . TYPE inits ;
    (10) declaration -> . error ;
    (80) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (18) instruction -> . print_instr
    (19) instruction -> . labeled_instr
    (20) instruction -> . assignment
    (21) instruction -> . choice_instr
    (22) instruction -> . while_instr
    (23) instruction -> . repeat_instr
    (24) instruction -> . return_instr
    (25) instruction -> . break_instr
    (26) instruction -> . continue_instr
    (27) instruction -> . compound_instr
    (28) instruction -> . expression ;
    (29) print_instr -> . PRINT expr_list ;
    (30) print_instr -> . PRINT error ;
    (31) labeled_instr -> . ID : instruction
    (32) assignment -> . ID = expression ;
    (33) choice_instr -> . IF ( condition ) instruction
    (34) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (35) choice_instr -> . IF ( error ) instruction
    (36) choice_instr -> . IF ( error ) instruction ELSE instruction
    (37) while_instr -> . WHILE ( condition ) instruction
    (38) while_instr -> . WHILE ( error ) instruction
    (39) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (40) return_instr -> . RETURN expression ;
    (42) break_instr -> . BREAK ;
    (41) continue_instr -> . CONTINUE ;
    (43) compound_instr -> . { declarations instructions_opt }
    (48) expression -> . const
    (49) expression -> . ID
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression % expression
    (55) expression -> . expression | expression
    (56) expression -> . expression & expression
    (57) expression -> . expression ^ expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression SHL expression
    (61) expression -> . expression SHR expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression NEQ expression
    (64) expression -> . expression > expression
    (65) expression -> . expression < expression
    (66) expression -> . expression LE expression
    (67) expression -> . expression GE expression
    (68) expression -> . ( expression )
    (69) expression -> . ( error )
    (70) expression -> . ID ( expr_list_or_empty )
    (71) expression -> . ID ( error )
    (45) const -> . INTEGER
    (46) const -> . FLOAT
    (47) const -> . STRING

    $end            reduce using rule 1 (program -> main_parts_interlacing .)
    TYPE            shift and go to state 33
    error           shift and go to state 31
    PRINT           shift and go to state 3
    ID              shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 4
    REPEAT          shift and go to state 15
    RETURN          shift and go to state 1
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 29
    {               shift and go to state 32
    (               shift and go to state 8
    INTEGER         shift and go to state 14
    FLOAT           shift and go to state 23
    STRING          shift and go to state 16

    instruction                    shift and go to state 25
    choice_instr                   shift and go to state 2
    repeat_instr                   shift and go to state 5
    return_instr                   shift and go to state 6
    const                          shift and go to state 7
    main_part                      shift and go to state 42
    continue_instr                 shift and go to state 11
    while_instr                    shift and go to state 12
    assignment                     shift and go to state 17
    labeled_instr                  shift and go to state 18
    compound_instr                 shift and go to state 19
    declaration                    shift and go to state 20
    break_instr                    shift and go to state 24
    fundef                         shift and go to state 26
    print_instr                    shift and go to state 28
    expression                     shift and go to state 30

state 11

    (26) instruction -> continue_instr .
